@@ -89,6 +89,8 @@ Collate:
     'geom-errorbarX.R'
     'geom-smooth-tern.R'
     'stat-smooth-tern.R'
+    'geom-mean-ellipse.R'
+    'stat-mean-ellipse.R'
     'geom-interpolate-tern.R'
     'stat-interpolate-tern.R'
     'stat-interpolate-methods.R'
