@@ -19,6 +19,7 @@ export(GeomLisoprop)
 export(GeomLline)
 export(GeomLmark)
 export(GeomMask)
+export(GeomMeanEllipse)
 export(GeomPointSwap)
 export(GeomRasterAnnTern)
 export(GeomRisoprop)
@@ -39,6 +40,7 @@ export(Rline)
 export(StatConfidenceTern)
 export(StatDensityTern)
 export(StatInterpolateTern)
+export(StatMeanEllipse)
 export(StatSmoothTern)
 export(Tarrowlab)
 export(Tlab)
@@ -84,6 +86,7 @@ export(geom_errorbarR)
 export(geom_errorbarT)
 export(geom_interpolate_tern)
 export(geom_mask)
+export(geom_mean_ellipse)
 export(geom_point_swap)
 export(geom_smooth_tern)
 export(getBreaks)
@@ -118,6 +121,7 @@ export(stat_confidence)
 export(stat_confidence_tern)
 export(stat_density_tern)
 export(stat_interpolate_tern)
+export(stat_mean_ellipse)
 export(stat_smooth_tern)
 export(tern_anticlockwise)
 export(tern_clockwise)
