@@ -1,24 +1,19 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/geom-confidence-tern.R, R/stat-confidence-tern.R, R/geom-mean-ellipse.R
+% Please edit documentation in R/geom-mean-ellipse.R, R/stat-mean-ellipse.R
 \docType{data}
-\name{geom_confidence_tern}
-\alias{GeomConfidenceTern}
-\alias{GeomMeanEllipse}
-\alias{StatConfidenceTern}
-\alias{geom_confidence}
-\alias{geom_confidence_tern}
-\alias{stat_confidence}
-\alias{stat_confidence_tern}
-\title{Confidence Interval}
+\name{geom_mean_ellipse}
+\alias{StatMeanEllipse}
+\alias{geom_mean_ellipse}
+\alias{stat_mean_ellipse}
+\title{Mean Ellipse}
 \usage{
-geom_confidence_tern(mapping = NULL, data = NULL, stat = "ConfidenceTern",
+geom_mean_ellipse(mapping = NULL, data = NULL, stat = "MeanEllipse",
   position = "identity", ..., lineend = "butt", linejoin = "round",
   linemitre = 1, na.rm = FALSE, show.legend = NA, inherit.aes = TRUE)
 
-stat_confidence_tern(mapping = NULL, data = NULL, geom = "ConfidenceTern",
-  position = "identity", ..., contour = TRUE, n = 100, h = NULL,
-  na.rm = FALSE, breaks = c(0.5, 0.9, 0.95), show.legend = NA,
-  inherit.aes = TRUE)
+stat_mean_ellipse(mapping = NULL, data = NULL, geom = "MeanEllipse",
+  position = "identity", ..., steps = 72, r = 1, na.rm = FALSE,
+  show.legend = NA, inherit.aes = TRUE)
 }
 \arguments{
 \item{mapping}{Set of aesthetic mappings created by \code{\link{aes}} or
@@ -72,22 +67,20 @@ the default plot specification, e.g. \code{\link{borders}}.}
 \item{geom}{Use to override the default connection between
 \code{geom_smooth} and \code{stat_smooth}.}
 
-\item{contour}{If \code{TRUE}, contour the results of the 2d density estimation}
+\item{steps}{the number of discretisation points to draw the ellipses}
 
-\item{n}{number of grid points in each direction}
-
-\item{h}{Bandwidth (vector of length two). If \code{NULL}, estimated using \code{\link[MASS]{bandwidth.nrd}}.}
-
-\item{breaks}{the confidence intervals, default to 50, 90 and 95 percent.}
+\item{r}{a scaling of the half-diameters}
 }
 \description{
-Calculates the confidence intervals, via the Mahalnobis Distance and use of the \code{\link[=ilr]{Log-Ratio}} Transformation
+Default geometry to produce the ellipses from a mean and a variance of ternary compositional data, 
+based off the function included in the \code{\link{compositions}} package.
 
-Statistic
+Statistics to produce the ellipses from a mean and a variance of ternary compositional data, 
+based off the function included in the \code{\link{compositions}} package.
 }
 \section{Aesthetics}{
 
-\Sexpr[results=rd,stage=build]{ggtern:::rd_aesthetics("geom", "ConfidenceTern")}
+\Sexpr[results=rd,stage=build]{ggtern:::rd_aesthetics("geom", "MeanEllipse")}
 }
 
 \section{Computed variables}{
@@ -98,10 +91,15 @@ Same as \code{\link{stat_contour}}
   data(Feldspar)
   ggtern(data=Feldspar,aes(An,Ab,Or)) + 
     geom_point() + 
-    geom_confidence_tern()
+    geom_mean_ellipse()
+data(Feldspar)
+ggtern(data=Feldspar,aes(Ab,An,Or)) +
+  theme_bw() + 
+  stat_mean_ellipse(geom='polygon',steps=500,fill='red',color='black') +
+  geom_point()
 }
 \author{
-Nicholas Hamilton
+Nicholas Hamilton & Ashton Drew
 }
 \keyword{datasets}
 
